--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
 }
 .container{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;            
+    grid-template-columns: 1fr 1fr 1fr 1fr;           
 }
 input{
     grid-column: 1 / 5;
@@ -16,28 +16,57 @@ input{
     border: 1px solid white;
     background-color: black;
     color: white;
-    border: 0;
+    border: 1px solid  rgb(212, 86, 40);
     font-size: 20px;
     padding:10px;
 }
-#add,#sub,#mul,#div,#C,#equal{
+.symbol{
     color: rgb(212, 86, 40);
 }
-#add{
+.number,.symbol{
+    border: 1px solid rgb(212, 86, 40);
+}
+.number:hover,.symbol:hover{
+    background-color: rgb(212, 86, 40);
+    color: white;
+    border: 2px solid black;
+}
+#equal{
+    background-color: rgb(212, 86, 40);
+    color: white;
+    border: 2px solid black;
+}
+#div{
     grid-column: 4 / 5;
     grid-row: 2;
 }
-#sub{
+#mul{
     grid-column: 4 / 5;
     grid-row: 3;
 }
-#mul{
+#sub{
     grid-column: 4 / 5;
     grid-row: 4;
 }
+#add{
+    grid-column: 4 / 5;
+    grid-row: 5;
+}
+#mod{
+    grid-column: 3 / 4;
+    grid-row: 2;
+}
+#zero{
+    grid-column: 1 / 3;
+
+}
 #C{
     grid-column: 1 / 2;
-    grid-row: 5;
+    grid-row: 2;
+}
+#del{
+    grid-column: 2 / 3;
+    grid-row: 2;
 }
 button{
     height: 75px;
@@ -50,7 +79,7 @@ button{
     body{
     height: 100vh;
     display: grid;
-    grid-template-columns: 65%;
+    grid-template-columns: 80%;
     align-content: center;
     justify-content: center;
 }
