--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ input{
     border: 1px solid  rgb(212, 86, 40);
     font-size: 20px;
     padding:10px;
+    outline: none;
 }
 .symbol{
     color: rgb(212, 86, 40);
