--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@ body{
 }
 .container{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;           
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    box-shadow: 2px 2px 10px 1px rgb(212, 86, 40);  
 }
 input{
     grid-column: 1 / 5;
